objects/HS_YP_Attendance__c.object
<CustomObject>
    <fields>
        <fullName>Application_form_completed__c</fullName>
        <label>Application form completed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Event_Selected__c</fullName>
        <inlineHelpText>Website populates this field once the YP selects/accepts an invitation</inlineHelpText>
        <label>Date Event Selected</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_YP_Event_Invite_Sent__c</fullName>
        <inlineHelpText>11.07.2016 . This date will show the date an invitation was sent to the YP</inlineHelpText>
        <label>Date YP Event Invite Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Did_YP_attend_the_event__c</fullName>
        <label>Did YP attend the event?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event_Date_Time__c</fullName>
        <formula>text(HS_Event_Day__r.Event_Day_Date__c) &amp;br()
&amp;HS_Event_Day__r.Event_Day_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Date &amp; Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Type_Selection__c</fullName>
        <inlineHelpText>This picklist is to help create rollups with this filtered. This is connected to a process which updates it depending on the Event type</inlineHelpText>
        <label>Event Type Selection</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <formula>HS_Event_Day__r.HS_Event__r.HS_Event_Type__r.Name</formula>
        <label>Event Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HS_Activity__c</fullName>
        <label>HS Activity</label>
        <referenceTo>HS_Activity__c</referenceTo>
        <relationshipLabel>HS YP Attendances</relationshipLabel>
        <relationshipName>HS_YP_Attendances</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>HS_Event_Day_Date__c</fullName>
        <description>Event Day Date mapped from HS Event Day to be used for time delayed workflow rule</description>
        <formula>HS_Event_Day__r.Event_Day_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HS Event Day Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HS_Event_Day__c</fullName>
        <label>HS Event Day</label>
        <referenceTo>HS_Event_Day__c</referenceTo>
        <relationshipLabel>HS YP Attendances</relationshipLabel>
        <relationshipName>HS_YP_Attendances</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>HS_Hours_Total__c</fullName>
        <formula>HS_Activity__r.HS_Hours_Total__c</formula>
        <label>HS Hours Total</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Link_to_YP_Event_Invite_Form__c</fullName>
        <formula>&quot;http://survey.clicktools.com/app/survey/go.jsp?iv=dsid7t4yu51h&amp;q1=&quot;&amp;( Id )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link to YP Event Invite Form</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Result_of_Interview__c</fullName>
        <label>Result of Interview</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unsuccessful</fullName>
                </value>
                <value>
                    <fullName>Successful - No OJE. Holding</fullName>
                </value>
                <value>
                    <fullName>Successful - Attend OJE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Result_of_application__c</fullName>
        <label>Result of application</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Send_Invite__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If Ticked - invite sent
If Unticked - invite not sent</inlineHelpText>
        <label>Send Invite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>YP_Attending_Event__c</fullName>
        <label>YP Attending Event?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Response</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>YP_Email__c</fullName>
        <label>YP Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>YP_Name__c</fullName>
        <formula>HS_Activity__r.Young_Person__r.FirstName &amp;&quot; &quot;&amp; HS_Activity__r.Young_Person__r.LastName</formula>
        <label>YP Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YP_Number__c</fullName>
        <formula>HS_Activity__r.HS_YP_mobile_number__c</formula>
        <label>YP Number</label>
        <type>Text</type>
    </fields>
    <label>HS YP Attendance</label>
    <listViews>
        <fullName>AGL_Berk_Zen_30th_YPs_declined_no_resp</fullName>
        <columns>YP_Name__c</columns>
        <columns>HS_Activity__c</columns>
        <columns>NAME</columns>
        <columns>Send_Invite__c</columns>
        <columns>YP_Attending_Event__c</columns>
        <columns>HS_Hours_Total__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Send_Invite__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>YP_Attending_Event__c</field>
            <operation>equals</operation>
            <value>No Response,No</value>
        </filters>
        <filters>
            <field>HS_Event_Day__c</field>
            <operation>contains</operation>
            <value>skills workshop</value>
        </filters>
        <filters>
            <field>YP_Name__c</field>
            <operation>notContain</operation>
            <value>test</value>
        </filters>
        <label>AGL Berk Zen 30th YPs declined/no resp</label>
        <sharedTo>
            <role>HeadStart_Assistant_Manager</role>
            <role>HeadStart_Associate</role>
            <role>HeadStart_Co_ordinator</role>
            <role>HeadStart_Manager</role>
            <role>Headstart_Assistant_Programme_Manager</role>
            <role>Headstart_Senior_Assistant_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AGL_Workshop_Guestlist_30th_Jan</fullName>
        <columns>YP_Name__c</columns>
        <columns>HS_Event_Day__c</columns>
        <columns>Did_YP_attend_the_event__c</columns>
        <columns>HS_Activity__c</columns>
        <columns>Send_Invite__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Send_Invite__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>YP_Attending_Event__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <filters>
            <field>HS_Event_Day__c</field>
            <operation>contains</operation>
            <value>Communication and Interview Skills Workshop,30th January</value>
        </filters>
        <filters>
            <field>Did_YP_attend_the_event__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <label>AGL Workshop Guestlist - 30th Jan</label>
        <sharedTo>
            <role>HeadStart_Assistant_Manager</role>
            <role>HeadStart_Associate</role>
            <role>HeadStart_Co_ordinator</role>
            <role>HeadStart_Manager</role>
            <role>Headstart_Assistant_Programme_Manager</role>
            <role>Headstart_Senior_Assistant_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AGL_Zen_Berk_30th_Jan_YP_Guestlist</fullName>
        <columns>NAME</columns>
        <columns>YP_Name__c</columns>
        <columns>Did_YP_attend_the_event__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Send_Invite__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>YP_Attending_Event__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <filters>
            <field>HS_Event_Day__c</field>
            <operation>contains</operation>
            <value>skills workshop</value>
        </filters>
        <label>AGL Zen Berk 30th Jan YP Guestlist</label>
        <sharedTo>
            <role>HeadStart_Assistant_Manager</role>
            <role>HeadStart_Associate</role>
            <role>HeadStart_Co_ordinator</role>
            <role>HeadStart_Manager</role>
            <role>Headstart_Assistant_Programme_Manager</role>
            <role>Headstart_Senior_Assistant_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AGL_Zen_Berk_30th_Jan_YPs_confirmed</fullName>
        <columns>NAME</columns>
        <columns>YP_Name__c</columns>
        <columns>YP_Number__c</columns>
        <columns>Send_Invite__c</columns>
        <columns>YP_Attending_Event__c</columns>
        <columns>Did_YP_attend_the_event__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Send_Invite__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>YP_Attending_Event__c</field>
            <operation>equals</operation>
            <value>Yes,No Response,No</value>
        </filters>
        <filters>
            <field>HS_Event_Day__c</field>
            <operation>contains</operation>
            <value>skills workshop</value>
        </filters>
        <label>AGL Zen &amp; Berk 30th Jan YPs confirmed</label>
        <sharedTo>
            <role>HeadStart_Assistant_Manager</role>
            <role>HeadStart_Associate</role>
            <role>HeadStart_Co_ordinator</role>
            <role>HeadStart_Manager</role>
            <role>Headstart_Assistant_Programme_Manager</role>
            <role>Headstart_Senior_Assistant_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Application_form_completed__c</columns>
        <columns>Did_YP_attend_the_event__c</columns>
        <columns>Event_Type__c</columns>
        <columns>HS_Activity__c</columns>
        <columns>HS_Event_Day__c</columns>
        <columns>HS_Hours_Total__c</columns>
        <columns>Result_of_application__c</columns>
        <columns>Result_of_Interview__c</columns>
        <columns>Send_Invite__c</columns>
        <columns>YP_Attending_Event__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Ambassador_Responses_all</fullName>
        <columns>HS_Activity__c</columns>
        <columns>NAME</columns>
        <columns>HS_Event_Day__c</columns>
        <columns>Event_Date_Time__c</columns>
        <columns>YP_Name__c</columns>
        <columns>Send_Invite__c</columns>
        <columns>YP_Attending_Event__c</columns>
        <columns>Did_YP_attend_the_event__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Event_Type_Selection__c</field>
            <operation>equals</operation>
            <value>ambassador engagement</value>
        </filters>
        <label>2016-2017 Ambassador Responses, all</label>
    </listViews>
    <listViews>
        <fullName>Aut15_GLA_Workshop</fullName>
        <columns>NAME</columns>
        <columns>YP_Name__c</columns>
        <columns>YP_Number__c</columns>
        <columns>HS_Hours_Total__c</columns>
        <columns>YP_Attending_Event__c</columns>
        <columns>Did_YP_attend_the_event__c</columns>
        <columns>HS_Event_Day__c</columns>
        <columns>Result_of_Interview__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Send_Invite__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>YP_Attending_Event__c</field>
            <operation>equals</operation>
            <value>No Response,Yes,No</value>
        </filters>
        <filters>
            <field>HS_Event_Day__c</field>
            <operation>contains</operation>
            <value>greater london authority workshop</value>
        </filters>
        <filters>
            <field>YP_Name__c</field>
            <operation>notContain</operation>
            <value>moscanator,test</value>
        </filters>
        <label>Aut15 - GLA Workshop</label>
        <sharedTo>
            <role>HeadStart_Assistant_Manager</role>
            <role>HeadStart_Associate</role>
            <role>HeadStart_Co_ordinator</role>
            <role>HeadStart_Manager</role>
            <role>Headstart_Assistant_Programme_Manager</role>
            <role>Headstart_Senior_Assistant_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Aut15_GLA_Workshop_Mike_copy</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND 6</booleanFilter>
        <columns>NAME</columns>
        <columns>HS_Activity__c</columns>
        <columns>YP_Name__c</columns>
        <columns>YP_Number__c</columns>
        <columns>HS_Hours_Total__c</columns>
        <columns>YP_Attending_Event__c</columns>
        <columns>Did_YP_attend_the_event__c</columns>
        <columns>HS_Event_Day__c</columns>
        <columns>Result_of_Interview__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Send_Invite__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>YP_Attending_Event__c</field>
            <operation>equals</operation>
            <value>No Response,Yes,No</value>
        </filters>
        <filters>
            <field>HS_Event_Day__c</field>
            <operation>contains</operation>
            <value>greater london authority workshop</value>
        </filters>
        <filters>
            <field>YP_Name__c</field>
            <operation>notContain</operation>
            <value>moscanator,test</value>
        </filters>
        <filters>
            <field>YP_Attending_Event__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <filters>
            <field>Did_YP_attend_the_event__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <label>Aut15 - GLA Workshop Mike copy</label>
        <sharedTo>
            <role>HeadStart_Assistant_Manager</role>
            <role>HeadStart_Associate</role>
            <role>HeadStart_Co_ordinator</role>
            <role>HeadStart_Manager</role>
            <role>Headstart_Assistant_Programme_Manager</role>
            <role>Headstart_Senior_Assistant_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Bloomberg_Interview</fullName>
        <columns>NAME</columns>
        <columns>YP_Name__c</columns>
        <columns>YP_Number__c</columns>
        <columns>HS_Hours_Total__c</columns>
        <columns>YP_Attending_Event__c</columns>
        <columns>Did_YP_attend_the_event__c</columns>
        <columns>HS_Event_Day__c</columns>
        <columns>Result_of_Interview__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Send_Invite__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>YP_Attending_Event__c</field>
            <operation>equals</operation>
            <value>Yes,No Response,No</value>
        </filters>
        <filters>
            <field>HS_Event_Day__c</field>
            <operation>contains</operation>
            <value>bloomberg interview</value>
        </filters>
        <filters>
            <field>YP_Name__c</field>
            <operation>notContain</operation>
            <value>test,moscanator</value>
        </filters>
        <label>Bloomberg Interview</label>
        <sharedTo>
            <role>HeadStart_Assistant_Manager</role>
            <role>HeadStart_Associate</role>
            <role>HeadStart_Co_ordinator</role>
            <role>HeadStart_Manager</role>
            <role>Headstart_Assistant_Programme_Manager</role>
            <role>Headstart_Senior_Assistant_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Bloomberg_Workshop_Invites_7_3_16</fullName>
        <columns>NAME</columns>
        <columns>YP_Name__c</columns>
        <columns>YP_Number__c</columns>
        <columns>HS_Hours_Total__c</columns>
        <columns>YP_Attending_Event__c</columns>
        <columns>Did_YP_attend_the_event__c</columns>
        <columns>HS_Event_Day__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Send_Invite__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>YP_Attending_Event__c</field>
            <operation>equals</operation>
            <value>Yes,No Response,No</value>
        </filters>
        <filters>
            <field>HS_Event_Day__c</field>
            <operation>contains</operation>
            <value>bloomberg workshop</value>
        </filters>
        <filters>
            <field>YP_Name__c</field>
            <operation>notContain</operation>
            <value>test,moscanator</value>
        </filters>
        <label>Bloomberg Workshop Invites 7/3/16</label>
        <sharedTo>
            <role>HeadStart_Assistant_Manager</role>
            <role>HeadStart_Associate</role>
            <role>HeadStart_Co_ordinator</role>
            <role>HeadStart_Manager</role>
            <role>Headstart_Assistant_Programme_Manager</role>
            <role>Headstart_Senior_Assistant_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Brum_SB_WS2_15_2</fullName>
        <columns>NAME</columns>
        <columns>YP_Name__c</columns>
        <columns>YP_Number__c</columns>
        <columns>HS_Hours_Total__c</columns>
        <columns>YP_Attending_Event__c</columns>
        <columns>Did_YP_attend_the_event__c</columns>
        <columns>HS_Event_Day__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Send_Invite__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>YP_Attending_Event__c</field>
            <operation>equals</operation>
            <value>Yes,No Response,No</value>
        </filters>
        <filters>
            <field>HS_Event_Day__c</field>
            <operation>contains</operation>
            <value>starbucks</value>
        </filters>
        <filters>
            <field>YP_Name__c</field>
            <operation>notContain</operation>
            <value>test,moscanator</value>
        </filters>
        <label>Brum - SB WS2 15/2 &amp; 19/2</label>
        <sharedTo>
            <role>HeadStart_Assistant_Manager</role>
            <role>HeadStart_Associate</role>
            <role>HeadStart_Co_ordinator</role>
            <role>HeadStart_Manager</role>
            <role>Headstart_Assistant_Programme_Manager</role>
            <role>Headstart_Senior_Assistant_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Brum_SB_WS2_19_21</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4</booleanFilter>
        <columns>NAME</columns>
        <columns>YP_Name__c</columns>
        <columns>YP_Number__c</columns>
        <columns>HS_Hours_Total__c</columns>
        <columns>YP_Attending_Event__c</columns>
        <columns>Did_YP_attend_the_event__c</columns>
        <columns>HS_Event_Day__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Send_Invite__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>YP_Attending_Event__c</field>
            <operation>equals</operation>
            <value>Yes,No Response</value>
        </filters>
        <filters>
            <field>HS_Event_Day__c</field>
            <operation>contains</operation>
            <value>19th February</value>
        </filters>
        <filters>
            <field>YP_Name__c</field>
            <operation>notContain</operation>
            <value>test,moscanator</value>
        </filters>
        <label>Brum - SB WS2 19/2</label>
        <sharedTo>
            <role>HeadStart_Assistant_Manager</role>
            <role>HeadStart_Associate</role>
            <role>HeadStart_Co_ordinator</role>
            <role>HeadStart_Manager</role>
            <role>Headstart_Assistant_Programme_Manager</role>
            <role>Headstart_Senior_Assistant_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Brum_SB_WS3</fullName>
        <booleanFilter>1 AND 2 AND 3 AND (4 OR 5)</booleanFilter>
        <columns>HS_Activity__c</columns>
        <columns>NAME</columns>
        <columns>YP_Name__c</columns>
        <columns>YP_Number__c</columns>
        <columns>HS_Hours_Total__c</columns>
        <columns>YP_Attending_Event__c</columns>
        <columns>Did_YP_attend_the_event__c</columns>
        <columns>HS_Event_Day__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Send_Invite__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>YP_Name__c</field>
            <operation>notContain</operation>
            <value>test,moscanator</value>
        </filters>
        <filters>
            <field>HS_Event_Day__c</field>
            <operation>contains</operation>
            <value>Communications Masterclass,Birmingham - 12th March</value>
        </filters>
        <filters>
            <field>Did_YP_attend_the_event__c</field>
            <operation>equals</operation>
            <value>Yes,No</value>
        </filters>
        <filters>
            <field>Did_YP_attend_the_event__c</field>
            <operation>equals</operation>
        </filters>
        <label>Brum - SB WS3</label>
        <sharedTo>
            <role>HeadStart_Assistant_Manager</role>
            <role>HeadStart_Associate</role>
            <role>HeadStart_Co_ordinator</role>
            <role>HeadStart_Manager</role>
            <role>Headstart_Assistant_Programme_Manager</role>
            <role>Headstart_Senior_Assistant_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Brum_SB_WS3_12_3</fullName>
        <columns>NAME</columns>
        <columns>YP_Number__c</columns>
        <columns>HS_Hours_Total__c</columns>
        <columns>YP_Attending_Event__c</columns>
        <columns>Did_YP_attend_the_event__c</columns>
        <columns>YP_Name__c</columns>
        <columns>HS_Event_Day__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Send_Invite__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>YP_Attending_Event__c</field>
            <operation>equals</operation>
            <value>Yes,No Response,No</value>
        </filters>
        <filters>
            <field>HS_Event_Day__c</field>
            <operation>contains</operation>
            <value>Communications Masterclass</value>
        </filters>
        <filters>
            <field>YP_Name__c</field>
            <operation>notContain</operation>
            <value>test,moscanator</value>
        </filters>
        <label>Brum - SB WS3 12/3</label>
        <sharedTo>
            <role>HeadStart_Assistant_Manager</role>
            <role>HeadStart_Associate</role>
            <role>HeadStart_Co_ordinator</role>
            <role>HeadStart_Manager</role>
            <role>Headstart_Assistant_Programme_Manager</role>
            <role>Headstart_Senior_Assistant_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Brum_SB_WS3_No_Responders</fullName>
        <columns>NAME</columns>
        <columns>YP_Name__c</columns>
        <columns>YP_Number__c</columns>
        <columns>HS_Hours_Total__c</columns>
        <columns>YP_Attending_Event__c</columns>
        <columns>Did_YP_attend_the_event__c</columns>
        <columns>HS_Event_Day__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Send_Invite__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>YP_Attending_Event__c</field>
            <operation>equals</operation>
            <value>No Response</value>
        </filters>
        <filters>
            <field>HS_Event_Day__c</field>
            <operation>contains</operation>
            <value>master</value>
        </filters>
        <filters>
            <field>YP_Name__c</field>
            <operation>notContain</operation>
            <value>test,moscanator</value>
        </filters>
        <label>Brum - SB WS3 No Responders</label>
        <sharedTo>
            <role>HeadStart_Assistant_Manager</role>
            <role>HeadStart_Associate</role>
            <role>HeadStart_Co_ordinator</role>
            <role>HeadStart_Manager</role>
            <role>Headstart_Assistant_Programme_Manager</role>
            <role>Headstart_Senior_Assistant_Manager</role>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>HSYPA-{000000}</displayFormat>
        <label>HS YP Attendance</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HS YP Attendances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>